# ansible-later

./: .deepsource.toml  .dictionary  .drone.1.yml  .drone.jsonnet  .drone.yml  .flake8  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  Containerfile.multiarch  Dockerfile  Dockerfile.multiarch  LICENSE  MANIFEST.in  README.md  codecov.yml  import.txt  pyproject.toml  renovate.json  setup.cfg  setup.py  test-requirements.txt  tox-requirements.txt  tox.ini
.chglog/: config.yml
.github/: settings.yml
.woodpecker/: docs.yml  lint.yml  test.yml
ansiblelater/: __init__.py  __main__.py  candidate.py  exceptions.py  logger.py  rule.py  settings.py  standard.py
ansiblelater/.github/: settings.yml
ansiblelater/command/: base.py  candidates.py  review.py
ansiblelater/data/: standards.py
ansiblelater/examples/: standards.py
ansiblelater/rules/: CheckBecomeUser.py  CheckBracesSpaces.py  CheckChangedInWhen.py  CheckCommandHasChanges.py  CheckCommandInsteadOfArgument.py  CheckCommandInsteadOfModule.py  CheckCompareToEmptyString.py  CheckCompareToLiteralBool.py  CheckDeprecated.py  CheckDeprecatedBareVars.py  CheckEmptyStringCompare.py  CheckFQCNBuiltin.py  CheckFilePermissionMissing.py  CheckFilePermissionOctal.py  CheckFilterSeparation.py  CheckGitHasVersion.py  CheckInstallUseLatest.py  CheckKeyOrder.py  CheckLiteralBoolFormat.py  CheckLocalAction.py  CheckMetaChangeFromDefault.py  CheckMetaMain.py  CheckMissingFilePermission.py  CheckNameFormat.py  CheckNamedTask.py  CheckNativeYaml.py  CheckNestedJinja.py  CheckRelativeRolePaths.py  CheckScmInScr.py  CheckScmInSrc.py  CheckShellInsteadCommand.py  CheckTaskSeparation.py  CheckUniqueNamedTask.py  CheckVersion.py  CheckWhenFormat.py  CheckYamlColons.py  CheckYamlDocumentEnd.py  CheckYamlDocumentStart.py  CheckYamlEmptyLines.py  CheckYamlFile.py  (+9 more)
ansiblelater/test/config/: standards.py
ansiblelater/test/unit/: test_logger.py  test_settings.py
ansiblelater/tests/config/: standards.py
ansiblelater/tests/unit/: test_logger.py  test_logging.py  test_settings.py
ansiblelater/utils/: __init__.py  exceptions.py  rulehelper.py  yamlhelper.py
docker/: Dockerfile  Dockerfile.amd64  Dockerfile.arm  Dockerfile.arm64  manifest-quay.tmpl  manifest.tmpl
docs/: config.yaml
docs/content/: _index.md
docs/content/build_rules/: _index.md  candidates.md  rule.md  standards_check.md  standards_file.md
docs/content/configuration/: _index.md  cli.md  defaults.md  excludes.md  pre-commit.md
docs/content/included_rules/: _index.md
docs/content/setup/: pip.md  source.md
docs/content/usage/: _index.md  pre-commit.md
docs/data/menu/: main.yml  more.yml
tests/: requirements.txt
tests/config/: config.ini
tests/data/: yaml_success.yml
