[tool.poetry]
authors = ["Robert Kaussow <mail@thegeeklab.de>"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Natural Language :: English",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Utilities",
  "Topic :: Software Development",
]
description = "Reviews ansible playbooks, roles and inventories and suggests improvements."
documentation = "https://ansible-later.geekdocs.de/"
homepage = "https://ansible-later.geekdocs.de/"
include = [
  "LICENSE",
]
keywords = ["ansible", "code", "review"]
license = "MIT"
name = "ansible-later"
packages = [
  {include = "ansiblelater"},
]
readme = "README.md"
repository = "https://github.com/thegeeklab/ansible-later/"
version = "0.0.0"

[tool.poetry.dependencies]
PyYAML = "6.0"
ansible = {version = "5.4.0", optional = true}
ansible-core = {version = "2.12.3", optional = true}
anyconfig = "0.12.0"
appdirs = "1.4.4"
colorama = "0.4.4"
flake8 = "4.0.1"
jsonschema = "4.4.0"
nested-lookup = "0.2.23"
pathspec = "0.9.0"
python = "^3.8.0"
python-json-logger = "2.0.2"
toolz = "0.11.2"
unidiff = "0.7.3"
yamllint = "1.26.3"

[tool.poetry.dev-dependencies]
bandit = "1.7.3"
flake8-blind-except = "0.2.0"
flake8-builtins = "1.5.3"
flake8-docstrings = "1.6.0"
flake8-eradicate = "1.2.0"
flake8-isort = "4.1.1"
flake8-logging-format = "0.6.0"
flake8-pep3101 = "1.3.0"
flake8-polyfill = "1.0.2"
flake8-quotes = "3.3.1"
pep8-naming = "0.12.1"
pydocstyle = "6.1.1"
pytest = "7.0.1"
pytest-cov = "3.0.0"
pytest-mock = "3.7.0"
tomli = "2.0.1"
yapf = "0.32.0"
toml = "0.10.2"

[tool.poetry.extras]
ansible = ["ansible"]
ansible-core = ["ansible-core"]

[tool.poetry.scripts]
ansible-later = "ansiblelater.__main__:main"

[tool.poetry-dynamic-versioning]
enable = true
style = "semver"
vcs = "git"

[tool.isort]
default_section = "THIRDPARTY"
force_single_line = true
line_length = 99
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip_glob = ["**/.env*", "**/env/*", "**/.venv/*", "**/docs/*"]

[tool.pytest.ini_options]
addopts = "ansiblelater --cov=ansiblelater --cov-report=xml:coverage.xml --cov-report=term --cov-append --no-cov-on-fail"
filterwarnings = [
  "ignore::FutureWarning",
  "ignore:.*collections.*:DeprecationWarning",
  "ignore:.*pep8.*:FutureWarning",
]

[tool.coverage.run]
omit = ["**/test/*"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
