[metadata]
description-file = README.md
license_file = LICENSE

[bdist_wheel]
universal = 1

[flake8]
ignore = E501, W503, F401, N813
max-line-length = 100
exclude = .git,.tox,__pycache__,build,dist,tests,*.pyc,*.egg-info,.cache,.eggs

[tool:pytest]
filterwarnings =
    ignore:.*collections.*:DeprecationWarning
