[metadata]
description-file = README.md
license_file = LICENSE

[bdist_wheel]
universal = 1

[flake8]
ignore = E501, W503, F401, N813
max-line-length = 100
inline-quotes = double
exclude = .git,.tox,__pycache__,build,dist,tests,*.pyc,*.egg-info,.cache,.eggs
application-import-names = ansiblelater
format = ${cyan}%(path)s:%(row)d:%(col)d${reset}: ${red_bold}%(code)s${reset} %(text)s

[isort]
default_section = THIRDPARTY
known_first_party = ansiblelater
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
filterwarnings =
    ignore::FutureWarning
    ignore:.*collections.*:DeprecationWarning
    ignore:.*pep8.*:FutureWarning
